--- a/.github/workflows/generate-github-snake.yml
+++ b/.github/workflows/generate-github-snake.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Generate Contribution Graphs
         uses: Platane/snk@v3
         with:
-          github_user_name: your-github-username
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
